Estilização da calculadora

--- a/calculator/src/components/Button.css
+++ b/calculator/src/components/Button.css
@@ -18,12 +18,12 @@
     background-color: #ccc;
 }
 
-.button:double {
+.button.double {
     grid-column: span 2;
 }
 
 .button.triple {
-    grid-column: span 4;
+    grid-column: span 3;
 }
 
 /* Botões que representam alguma operação */
