--- a/crud/frontend/src/components/template/Footer.css
+++ b/crud/frontend/src/components/template/Footer.css
@@ -4,5 +4,5 @@ footer.footer {
     justify-content: flex-end;
     padding: 0 25px;
     background-color: #fff;
-    box-shadow: Var(--shadow);
+    box-shadow: var(--shadow);
 }
