--- a/crud/frontend/src/main/App.css
+++ b/crud/frontend/src/main/App.css
@@ -2,7 +2,8 @@
     --bg-dark: #1A2F3A;
 
     --logo-height: 100px;
-    --header-heigth: 100px;
+    --header-height: 100px;
+    --menu-top-height: 70px;
     --aside-width: 225px;
     --footer-height: 40px;
 
@@ -10,7 +11,6 @@
         0 2px 23px 0 rgba(0, 0, 0, 0.1),
         0 2px 49px 0 rgba(0, 0, 0, 0.6)
 }
-
 * {
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
@@ -22,35 +22,27 @@
 .app {
     margin: 0px;
     display: grid;
-    grid-template-columns: 
-        var(--aside-width) 1fr; 
-    grid-template-rows: 
-        var(--header-heigth)  
+    grid-template-columns: var(--aside-width) 1fr;
+    grid-template-rows:
+        var(--header-height)
         1fr
         var(--footer-height);
-
     /* indica como preencher as areas */
     grid-template-areas: 
-        "logo header",
+        "logo header"
         "menu content"
         "menu footer";
     height: 100vh;
     background-color: #F5F5F5;
 }
 
-aside .logo {
+aside.logo {
     grid-area: logo;
 }
 
 header.header {
     grid-area: header;
 }
-
-
-header.header {
-    grid-area: header;
-}
-
 
 aside.menu-area{
     grid-area: menu;
