--- a/crud/frontend/src/main/App.css
+++ b/crud/frontend/src/main/App.css
@@ -1,4 +1,6 @@
 :root {
+
+    /* foi realizado o uso de variaveis */
     --bg-dark: #1A2F3A;
 
     --logo-height: 100px;
@@ -54,4 +56,37 @@ main.content{
 
 footer.footer{
     grid-area: footer;
+}
+
+/* Adicionando responsividade */
+@media(max-width: 768px){
+    .app{
+        grid-template-rows: 
+            var(--header-height)
+            var(--menu-top-height)
+            1fr
+            var(--footer-height);
+        grid-template-columns: var(--aside-width) 1fr;
+        grid-template-areas: 
+            "logo header"
+            "menu menu"
+            "content content"
+            "footer footer";
+    }
+}
+
+@media(max-width: 576px){
+    .app {
+        grid-template-rows: 
+            var(--logo-height)
+            var(--menu-top-height)
+            1fr
+            var(--footer-height);
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+            "logo"
+            "menu"
+            "content"
+            "footer"    
+    }
 }
